--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@modules/2fa": "file:./modules/2fa/",
     "@modules/camera": "file:./modules/camera/",
     "@modules/image-gallery": "file:./modules/image-gallery/",
+    "@modules/maps": "file:./modules/maps/",
     "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
@@ -30,7 +31,10 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-google-places-autocomplete": "2.4.1",
     "react-native-image-crop-picker": "0.36.2",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "1.8.0",
     "react-native-paper": "^5.9.1",
     "react-native-permissions": "3.0.4",
     "react-native-radio-buttons-group": "^2.3.2",
