--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@modules/camera": "file:./modules/camera/",
     "@modules/image-gallery": "file:./modules/image-gallery/",
     "@modules/maps": "file:./modules/maps/",
+    "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/user-profile": "file:./modules/user-profile/",
     "@react-native-camera-roll/camera-roll": "5.0.2",
@@ -26,6 +27,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "mixpanel-react-native": "^2.3.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
