--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -38,3 +38,4 @@ azure-identity = "~=1.16.0"
 cb-django-calendly = {editable = true, path = "./modules/django_calendly"}
 cb-django-disqus = {editable = true, path = "./modules/django_disqus"}
 cb-django-openai = {editable = true, path = "./modules/django_openai"}
+cb-django-docusign = {editable = true, path = "./modules/django_docusign"}
