--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -39,3 +39,4 @@ cb-django-calendly = {editable = true, path = "./modules/django_calendly"}
 cb-django-disqus = {editable = true, path = "./modules/django_disqus"}
 cb-django-openai = {editable = true, path = "./modules/django_openai"}
 cb-django-docusign = {editable = true, path = "./modules/django_docusign"}
+cb-django-ocr = {editable = true, path = "./modules/django_ocr"}
