--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -40,3 +40,4 @@ cb-django-disqus = {editable = true, path = "./modules/django_disqus"}
 cb-django-openai = {editable = true, path = "./modules/django_openai"}
 cb-django-docusign = {editable = true, path = "./modules/django_docusign"}
 cb-django-ocr = {editable = true, path = "./modules/django_ocr"}
+cb-terms-and-conditions = {editable = true, path = "./modules/terms_and_conditions"}
