--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
+    "@modules/social-feed": "file:./modules/social-feed",
     "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
     "@modules/user-profile": "file:./modules/user-profile/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
