--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/polyfill": "^7.12.1",
     "@modules/2fa": "file:./modules/2fa/",
+    "@modules/articles": "file:./modules/articles/",
     "@modules/camera": "file:./modules/camera/",
     "@modules/faq": "file:./modules/faq",
     "@modules/image-gallery": "file:./modules/image-gallery/",
